fixed header z-index values

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -78,6 +78,7 @@ header {
     top: 0px;
     position: fixed;
     width: 100%;
+    z-index: 1000;
 }
 
     header h1 {
@@ -207,6 +208,7 @@ header .nav-btn {
     -webkit-box-shadow: 0 6px 8px -4px #b3b1b3;
     -moz-box-shadow: 0 6px 8px -4px #b3b1b3;
     box-shadow: 0 6px 8px -4px #b3b1b3;
+    z-index: 3;
 }
 
     .navigation-main .nav-container {
